--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
     "mongoose": "^8.3.4",
+    "mongoose-paginate-v2": "^1.9.0",
     "nodemon": "^3.1.9",
     "socket.io": "^4.8.1"
   }
